<resources>
    <string name="app_name">TriviaFUN</string>
    <string name="start_game">Start Game</string>
    <string name="stats">Stats</string>
    <string name="triviafun">TriviaFUN</string>
    <string name="settings_credits">Settings / Credits</string>
    <string name="categories">Categories</string>
    <string name="main_menu">Main Menu</string>
    <string name="score">Score: %d</string>
    <string name="x">X</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="settings">Settings</string>
    <string name="fx">FX</string>
    <string name="on">ON</string>
    <string name="credits">Credits</string>
    <string name="open_trivia_database">• Open Trivia Database\n\t\t• No changes were made.</string>
    <string name="link_to_api"><u>Link to the API here</u></string>
    <string name="link_to_license"><u>Link to the license here</u></string>
    <string name="dreamstime_sound_effects">• Sound effects taken royalty-free \n\t\tfrom Dreamstime</string>
    <string name="back_arrow"><![CDATA[<]]></string>
    <string name="triviafun2">TRIVIAFUN</string>
    <string name="leaderboard_text">
        1. %1$s\n2. %2$s\n3. %3$s\n4. %4$s\n5. %5$s\n6. %6$s\n7. %7$s\n8. %8$s\n9. %9$s\n10. %10$s
    </string>
</resources>