<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:radius="20dp"
        android:text="@string/triviafun"
        android:textColor="#858585"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnStart"
            style="@style/activity_main_button"
            android:layout_marginBottom="25dp"
            android:background="@drawable/main_button1"
            android:text="@string/start_game" />

        <Button
            android:id="@+id/btnLeaderboard"
            style="@style/activity_main_button"
            android:layout_marginBottom="25dp"
            android:background="@drawable/main_button2"
            android:text="@string/leaderboard" />

        <Button
            android:id="@+id/btnSettings"
            style="@style/activity_main_button"
            android:background="@drawable/default_button"
            android:text="@string/settings_credits" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>